--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fse
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=pass@word1
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.hiebernate.ddl-auto=update
 
 server.port=8081
