--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,22 +40,17 @@ jobs:
 
       # run tests!
       - run: mvn test
-          name: Save test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
-          when: always
       
       # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
       - store_test_results: 
       # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: ~/test-results
+          path: target/surefire-reports
           #path: target/coverage-reports
       
       # store the uberjar as an artifact
       - store_artifacts: 
       # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: ~/test-results/junit
+          path: target/surefire-reports
           
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
       
