--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,17 +40,15 @@ jobs:
 
       # run tests!
       - run: mvn test
-      
-      # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
-      - store_test_results: 
+
+      # uploads the test metadata from the 'target/surefire-reports' directory so that it can show up in the CircleCI dashboard.
+      - store_test_results:
       # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: target/surefire-reports
-          #path: target/coverage-reports
-      
+
       # store the uberjar as an artifact
-      - store_artifacts: 
+      - store_artifacts:
       # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: target/surefire-reports
-          
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
-      
+
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
